[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crdts"
version = "0.0.4"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "A library of Conflict-free Replicated Data Types (11 included)"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "packify >= 0.2.2",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/CRDTs"
"Bug Tracker" = "https://github.com/k98kurz/CRDTs/issues"